# advent-of-code-2024

./: .gitignore  Makefile  aoc2024.cabal
app/: Common.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs
app/Common/: Grid.hs  List.hs
