cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options:
        -Weverything

executable aoc2024
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base^>=4.17.2.1
    build-tool-depends:
        ormolu:ormolu==0.7.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
