cabal-version:      3.0
name:               aoc2024
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options:
        -Weverything
        -Wno-all-missed-specialisations
        -Wno-implicit-prelude
        -Wno-missing-kind-signatures
        -Wno-missing-deriving-strategies
        -Wno-missing-safe-haskell-mode
        -Wno-prepositive-qualified-module
        -Wno-safe

executable aoc2024
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Common.Grid
        Common.List
        Day1
        Day2
        Day3
        Day4
        Day5
        Day6
        Day7
        Day8
        Day9
        Day10
    build-depends:
        base^>=4.17.2.1,
        containers,
    build-tool-depends:
        ormolu:ormolu==0.7.4.0,
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        InstanceSigs,
        TupleSections,
